--- a/DATA_690_Assignment_02.ipynb
+++ b/DATA_690_Assignment_02.ipynb
@@ -27,16 +27,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "fIY7_DrFFNrG",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "GIEg9BpqFPya",
         "colab_type": "text"
       },
@@ -80,97 +70,115 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PVbaSHTQ60Fa",
+        "id": "WAamOK-8NYGO",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 105
+          "height": 336
         },
-        "outputId": "4c96a9ef-c1da-43a0-fc2a-46c6b358a16a"
+        "outputId": "c101f338-ffe7-4fea-f41b-8e1737e54dcd"
       },
       "source": [
+        "# firstly we need to create an empty list\n",
         "numbers = []\n",
+        "# We need exactly 10 integers, so we need to get input till i reaches 10. With that 'numbers' list will get 10 elements.\n",
         "i = 0\n",
-        "while i < 3: \n",
+        "while i < 10: \n",
         "    try:\n",
-        "      is_int = int(input(f\"Enter the {i}. number: \"))\n",
+        "      # Get user input\n",
+        "      is_int = int(input(f\"Enter the {i}. number: \")) # If the input is integer, this function adds it to our list. Otherwise 'except' code runs.\n",
         "      numbers.append(is_int)\n",
         "      i += 1  \n",
-        "    except:\n",
+        "    except: # If the input is not integer, our code warns the user. \n",
         "      print(\"You entered an invalid value. Please give an integer.\")\n",
         "\n",
-        "\n",
-        "\n",
+        "mean = sum(numbers) / len(numbers) # identifying mean value to read the code easily\n",
+        "var = sum(pow(i-mean,2) for i in numbers) / len(numbers)  # identifying variance value to read the code easily\n",
+        "import math\n",
         "print(f\"You entered {len(numbers)} integers: {numbers}\\n\",\n",
-        "      f\"maximum is: {max(numbers)}\",\n",
-        "      f\"minimum is: {min(numbers)}\",\n",
-        "      )"
+        "      f\"maximum is: {max(numbers)}\\n\",\n",
+        "      f\"minimum is: {min(numbers)}\\n\",\n",
+        "      f\"range is: {range(min(numbers), max(numbers))}\\n\",\n",
+        "      f\"mean is: {sum(numbers) / len(numbers)}\\n\",\n",
+        "      f\"variance is: {sum(pow(i-mean,2) for i in numbers) / len(numbers)}\\n\",\n",
+        "      f\"std deviation is: {math.sqrt(var)}\\n\",\n",
+        "      )\n",
+        "\n"
       ],
-      "execution_count": 1,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Enter the 0. number: 123\n",
-            "Enter the 1. number: 324\n",
-            "Enter the 2. number: 4\n",
-            "You entered 3 integers: [123, 324, 4]\n",
-            " maximum is: 324 minimum is: 4\n"
+            "Enter the 1. number: 2\n",
+            "Enter the 2. number: 25\n",
+            "Enter the 3. number: 34\n",
+            "Enter the 4. number: 12\n",
+            "Enter the 5. number: 45\n",
+            "Enter the 6. number: 7\n",
+            "Enter the 7. number: 68\n",
+            "Enter the 8. number: 3\n",
+            "Enter the 9. number: 678\n",
+            "You entered 10 integers: [123, 2, 25, 34, 12, 45, 7, 68, 3, 678]\n",
+            " maximum is: 678\n",
+            " minimum is: 2\n",
+            " range is: range(2, 678)\n",
+            " mean is: 99.7\n",
+            " variance is: 38404.81\n",
+            " std deviation is: 195.97145200258123\n",
+            "\n"
           ],
           "name": "stdout"
         }
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "E1cQ510hcCnH",
+        "colab_type": "text"
+      },
+      "source": [
+        "PS. Variance and std deviation values are different in two different methods. Why? The reason can be rounding?"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "CZVvBwtaFegS",
+        "id": "9owRCgB2L9wM",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 283
+          "height": 141
         },
-        "outputId": "43e6fafa-87fc-4367-94e8-20507db59755"
+        "outputId": "17677425-f933-4340-e191-f409acd7b9e8"
       },
       "source": [
-        "# Firstly, we need to create an empty list for 10 integers.\n",
-        "thislist = []\n",
-        "# get user input\n",
-        "while len(thislist) < 10:\n",
-        "    x = input(\"You need 10 integers: \")\n",
-        "    thislist.append(x)\n",
-        "    if len(thislist) == 10: \n",
-        "        print(\"Congratulations! You have 10 integers!\")\n",
-        "        break\n",
-        "print(thislist)\n",
-        "print(len(thislist))\n",
-        "print(min(thislist))\n",
-        "print(max(thislist))\n",
-        "\n",
-        "    \n",
-        "\n",
-        "    "
+        "# this is extra with statistics\n",
+        "import statistics\n",
+        "print(f\"You entered {len(numbers)} integers: {numbers}\",\n",
+        "      f\"maximum is: {max(numbers)}\",\n",
+        "      f\"minimum is: {min(numbers)}\",\n",
+        "      f\"range is: {range(min(numbers), max(numbers))}\",\n",
+        "      f\"mean is: {statistics.mean(numbers)}\",\n",
+        "      f\"variance is: {statistics.variance(numbers)}\",\n",
+        "      f\"std deviation is: {statistics.stdev(numbers)}\",\n",
+        "      sep=\"\\n\",\n",
+        "      )"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "You need 10 integers: 23\n",
-            "You need 10 integers: 34\n",
-            "You need 10 integers: 546\n",
-            "You need 10 integers: 12\n",
-            "You need 10 integers: 0\n",
-            "You need 10 integers: 34\n",
-            "You need 10 integers: 67\n",
-            "You need 10 integers: 4657\n",
-            "You need 10 integers: 3\n",
-            "You need 10 integers: 6\n",
-            "Congratulations! You have 10 integers!\n",
-            "['23', '34', '546', '12', '0', '34', '67', '4657', '3', '6']\n",
-            "10\n",
-            "0\n",
-            "67\n"
+            "You entered 10 integers: [123, 2, 25, 34, 12, 45, 7, 68, 3, 678]\n",
+            "maximum is: 678\n",
+            "minimum is: 2\n",
+            "range is: range(2, 678)\n",
+            "mean is: 99.7\n",
+            "variance is: 42672.011111111104\n",
+            "std deviation is: 206.57204823284079\n"
           ],
           "name": "stdout"
         }
