--- a/DATA_690_Assignment_02.ipynb
+++ b/DATA_690_Assignment_02.ipynb
@@ -94,7 +94,8 @@
         "\n",
         "mean = sum(numbers) / len(numbers) # identifying mean value to read the code easily\n",
         "var = sum(pow(i-mean,2) for i in numbers) / len(numbers)  # identifying variance value to read the code easily\n",
-        "import math\n",
+        "\n",
+        "import math # We are allowed to use standard library\n",
         "print(f\"You entered {len(numbers)} integers: {numbers}\\n\",\n",
         "      f\"maximum is: {max(numbers)}\\n\",\n",
         "      f\"minimum is: {min(numbers)}\\n\",\n",
