--- a/DATA_690_Assignment_02.ipynb
+++ b/DATA_690_Assignment_02.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "DATA_690_Assignment-02.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -14,16 +13,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/ybaris/DATA-690-WANG/blob/master/DATA_690_Assignment_02.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -94,8 +83,7 @@
         "\n",
         "mean = sum(numbers) / len(numbers) # identifying mean value to read the code easily\n",
         "var = sum(pow(i-mean,2) for i in numbers) / len(numbers)  # identifying variance value to read the code easily\n",
-        "\n",
-        "import math # We are allowed to use standard library\n",
+        "import math\n",
         "print(f\"You entered {len(numbers)} integers: {numbers}\\n\",\n",
         "      f\"maximum is: {max(numbers)}\\n\",\n",
         "      f\"minimum is: {min(numbers)}\\n\",\n",
